# CMakeList.txt : CMake project for NN_TO_RTL, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("NN_TO_RTL")

# Add source to this project's executable.
add_executable (NN_TO_RTL "NN_TO_RTL.cpp" "NN_TO_RTL.h")

# TODO: Add tests and install targets if needed.
